--- a/bi2.qmd
+++ b/bi2.qmd
@@ -3,7 +3,7 @@ source(file = "ping-pong-dm-input.R")
 ```
 
 ```{r}
-DataAkt_T <- Data_T %>% filter(EventAar_RD == InputEventAarAkt_V)
+DataAkt_T <- Data_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
 ```
 
 ---
