--- a/indbydelse-tilmelding-2024.qmd
+++ b/indbydelse-tilmelding-2024.qmd
@@ -9,7 +9,7 @@ DataEventAarAkt_T <- DataEventAar_T %>% filter(grepl(InputEventAarAkt_V, EventAa
 DataBilletKatAkt_T <- DataBilletKat_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
 DataPraemiePengeAkt_T <- DataPraemiePenge_T %>% filter(grepl(InputEventAarAkt_V, EventAar_RD))
 DataResultSidsteEventAkt_T <- DataResultSidsteEvent_T %>% filter(
-  grepl(InputEventAarAkt_V, EventAar_RD) &
+  grepl(InputEventAarAkt_V, EventAarSidst_DW) &
   grepl("A-slutspil", DeltSlutspil_RD) &
   grepl("[1-4]", Placering))
 ```
@@ -78,42 +78,42 @@ data.frame(
 		IkonFest_V),
 	"Klokkeslæt" = c(
 		paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-90), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(-90), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+465), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-90), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-15), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(-90), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(-15), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-15), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+0), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(-15), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+0), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+0), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+180), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+0), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+180), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+180), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+330), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+180), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+330), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+330), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+450), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+330), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+450), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+450), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M")),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+450), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+465), "%H:%M")),
     paste(
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+465), "%H:%M"),"-",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+510), "%H:%M")),
-    paste("Fra", format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(+510), "%H:%M"))),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+465), "%H:%M"),"-",
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+510), "%H:%M")),
+    paste("Fra", format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(+510), "%H:%M"))),
 	"Type" = c(
-		paste0("<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-", DataEventAarAkt_T$EventAarStartDato_DW_Aar_DW, ".qmd#ping-pong", ">DM i Ping Pong ", DataEventAarAkt_T$EventAarStartDato_DW_Aar_DW, "</a>"),
+		paste0("<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-2023.qmd#ping-pong", ">DM i Ping Pong ", DataEventAarAkt_T$EventAarStartDato_DW_Aar_DW, "</a>"),
     paste(
     	"Mulighed for opvarmning.<br><b>Check-in senest",
-    	format(DataEventAarAkt_T$EventAarStartDatoTid_DW + minutes(-30), "%H:%M."), "</b>"),
+    	format(unique(DataAkt_T$EventAarStartDatoTid_DW) + minutes(-30), "%H:%M."), "</b>"),
     "Velkomst og gruppebillede.",
     "Puljespil.",
     "A-/B-slutspil.",
     "<q>Final 4</q> i A-slutspil.",
     "Præmieoverrækkelse.",
     "Evt. omklædning til fest.",
-    paste0("<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-", DataEventAarAkt_T$EventAarStartDato_DW_Aar_DW, ".qmd#fest-om-aftenen>Fest om aftenen</a>")),
+    "<a style=color:#000000;text-decoration:none href=indbydelse-tilmelding-2023.qmd#fest-om-aftenen>Fest om aftenen</a>"),
 	check.names = F) %>%
 	kbl(table.attr = "data-quarto-disable-processing=true",
 	    col.names = NA, align = "l", escape = F,
