--- a/bi.qmd
+++ b/bi.qmd
@@ -357,9 +357,9 @@ if(nrow(DataKlubMangel_T) == 0) {
 					"<br>",
 					"<i style=font-size:80%>Sorteret efter år, region og klub</i>")) %>%
 		kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-		row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+		row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 		row_spec(which(grepl("Afbud", DataKlubMangel_T$OrdreStatusSimpelKat_RD)),
-						 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+						 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 		column_spec(1, width_min = "2em") %>%
 		column_spec(1:5, extra_css = "border-top:0.7px solid #999999") %>%
 		remove_column(6:7)
@@ -400,9 +400,9 @@ if(nrow(DataDeltMangel_T) == 0) {
 				"<br>",
 				"<i style=font-size:80%>Sorteret efter klubantal og år</i>")) %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltMangel_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:4, extra_css = "border-top:0.7px solid #999999") %>%
 	remove_column(5:6)
