--- a/praemier-deltagere.qmd
+++ b/praemier-deltagere.qmd
@@ -162,7 +162,7 @@ if(InputInfo1234_V %in% c(3)) {
     c("Sorteret efter billettype og fødselsdato" = 8),
     italic = T, align = "c", font_size = "small", escape = F,
     extra_css = "border:hidden;border-bottom:1.5px solid #111111") %>%
-  row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+  row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	column_spec(1:4, extra_css = "border-top:0.7px solid #999999") %>%
   remove_column(4:8)
   }
@@ -215,9 +215,9 @@ if(InputInfo1234_V %in% c(1, 2, 3, 4)) {
     c("Sorteret efter fødselsdato" = 5),
     italic = T, align = "c", font_size = "small", escape = F,
     extra_css = "border:hidden;border-bottom:1.5px solid #111111") %>%
-  row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+  row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
   row_spec(which(grepl("Afbud", DataDeltAndetAkt_T$OrdreStatusSimpelKat_RD)),
-           strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+           strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
   row_spec(which(DataDeltAndetAkt_T$Nr. == "1"),
            extra_css = "border:hidden;border-top:0.7px solid #111111") %>%
   remove_column(4:5)
@@ -275,9 +275,9 @@ DataDeltKlubAkt_T %>%
 	    col.names = NA, align = "l", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter klubantal</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltKlubAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
 	remove_column(4:5) %>%
@@ -341,9 +341,9 @@ DataDeltByAkt_T %>%
 	    col.names = NA, align = "l", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter region og postnr.</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltByAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
 	remove_column(4:5) %>%
@@ -396,9 +396,9 @@ DataDeltAlderKatAkt_T %>%
 	    col.names = NA, align = "l", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter fødselsdato</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltAlderKatAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
 	remove_column(4:5) %>%
@@ -445,9 +445,9 @@ DataDeltKoenAkt_T %>%
 	    col.names = NA, align = "l", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter køn</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltKoenAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(3, width_min = "5em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
@@ -494,9 +494,9 @@ DataDeltGenTilAkt_T %>%
 	    col.names = NA, align = "l", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter antal gentilmeldinger</i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltGenTilAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
 	remove_column(4:5) %>%
@@ -549,9 +549,9 @@ DataDeltOrdreKatAkt_T %>%
 	    col.names = NA, align = "l", escape = F,
 			caption = "<i style=font-size:80%>Sorteret efter ældste <q>første ordredato</q></i>") %>%
 	kable_classic(position = "l", full_width = F, html_font = "verdana") %>%
-	row_spec(0, background = unique(DataEventAarAkt_T$EventAarFarve1_RD), color = "#FFFFFF") %>%
+	row_spec(0, background = DataEventAarAkt_T$EventAarFarve1_RD, color = "#FFFFFF") %>%
 	row_spec(which(grepl("Afbud", DataDeltOrdreKatAkt_T$OrdreStatusSimpelKat_RD)),
-					 strikeout = T, color = unique(DataEventAarAkt_T$EventAarFarve1_RD)) %>%
+					 strikeout = T, color = DataEventAarAkt_T$EventAarFarve1_RD) %>%
 	column_spec(1, width_min = "2em") %>%
 	column_spec(3, width_min = "7em") %>%
 	column_spec(1:3, extra_css = "border-top:0.7px solid #999999") %>%
